--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "TutoSite",
   "version": "0.0.1",
-  "description": "An Ionic project",
+  "description": "An Ionic project, for power knowledge",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/driftyco/ionic-conference-app.git"
+    "url": "https://github.com/esvin/TutoSiteApp.git"
   },
   "scripts": {
     "build": "ionic-app-scripts build",
@@ -35,8 +35,8 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.7",
-    "@ionic/cli-plugin-cordova": "1.0.0",
-    "@ionic/cli-plugin-ionic-angular": "1.0.0",
+    "@ionic/cli-plugin-cordova": "1.1.2",
+    "@ionic/cli-plugin-ionic-angular": "1.1.2",
     "typescript": "2.2.1"
   },
   "config": {}
